<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">BookReuse</string>
    <string name="book_reuse">BookReuse</string>
    <string name="rent_books">Арендуй книги</string>
    <string name="leave_reviews">Оставляй отзывы</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="add">Add</string>
    <string name="messages">Messages</string>
    <string name="profile">Profile</string>
    <string name="placeholder">Placeholder</string>
    <string name="add_button">Add button</string>
    <string name="you_are_not_authorization">Вы не авторизованы</string>
    <string name="log_in">Авторизоваться</string>
    <string name="anonimus_user">Анонимный пользователь</string>
    <string name="enter_or_registration">Вход или регистрация</string>
    <string name="create">Создать</string>
    <string name="advert">Объявление</string>
    <string name="review">Рецензия</string>
    <string name="about_application">О приложении</string>
    <string name="about_application_description">Приложение написано для легкого поиска книг рядом. Исходный код приложения находится в открытом доступе.</string>
    <string name="link_to_github">Ссылка на GitHub</string>
    <string name="link_to_developer_vk">Ссылка на ВК разарботчика</string>
    <string name="developer_telegram_title">Телеграмм разработчика:</string>
    <string name="telegram">/@dr_matjo</string>
    <string name="about_app_addition_tittle">По любым вопросам и предложениям можно также писать на почту:</string>
    <string name="mandscompanyoffers_gmail_com">mandscompanyoffers@gmail.com</string>
    <string name="vk_link">https://vk.com/matwej1000</string>
    <string name="successfully_copied_to_clipboard">Скопировано в буфер обмена</string>
    <string name="github_link">https://github.com/Ferum-bot/BookReuse</string>
    <string name="base_message_for_no_activity_exception">Отсутствуют приложения, которые могут обработать этот запрос.</string>
    <string name="install_browser">Пожалуйста, установите браузер</string>
    <string name="enter">Войти</string>
    <string name="email_label">Почта</string>
    <string name="password_label">Пароль</string>
    <string name="enter_to_book_reuse">Войти в BookReuse</string>
    <string name="forget_password">Забыл пароль</string>
    <string name="register">Зарегистрироваться</string>
    <string name="password_recovery">Восстановление доступа</string>
    <string name="recovery_password_description">Забыли пароль? Введите свою почту и мы вышлем вам специальный код.</string>
    <string name="send">Отправить</string>
    <string name="enter_email_error">Введите почту</string>
    <string name="enter_password_error">Введите пароль</string>
    <string name="confirm_recover_code_description">Введите 5-ти значный код с почты. Повторно выслать код можно будет через %s секунд.</string>
    <string name="proceed">Продолжить</string>
    <string name="send_again">Отправить еще раз</string>
    <string name="come_up_with_new_password">Придумайте новый пароль.</string>
    <string name="new_password">Новый пароль</string>
    <string name="repeat_new_password">Повторите пароль</string>
    <string name="passwords_not_match_error">Пароли не совпадают</string>
    <string name="confirm">Завершить</string>
    <string name="registration">Регистрация</string>
    <string name="come_up_with_password">Придумайте пароль</string>
    <string name="general_information">Общая информация</string>
    <string name="nickname_necessarily">Ник(обязательно)</string>
    <string name="nick_name_label_error">Укажите ник</string>
    <string name="telephone_optional">Телефон(опционально)</string>
    <string name="telephone_number_invalid_format">Неверный формат</string>
    <string name="not_specified">Не указан</string>
    <string name="address_optional">Адрес(опционально)</string>
    <string name="allow_call">Разрешить звонки</string>
    <string name="address">Адрес</string>
    <string name="apply">Применить</string>
    <string name="read_more">Читать дальше</string>
    <string name="recomendation">Рекомендации</string>
    <string name="new_type">Новые</string>
    <string name="near_you">Рядом с вами</string>
    <string name="edit">Edit</string>
    <string name="save">Save</string>
    <string name="to_write">Написать</string>
    <string name="information_about_book">Информация о книге:</string>
    <string name="author">Автор:</string>
    <string name="title">Название:</string>
    <string name="description">Описание:</string>
    <string name="geo_position">Геопозиция:</string>
    <string name="linked_review">Прикрепленная рецензия:</string>

    <!--BookReuse API Keys -->
    <string
        name="yandex_map_kit_api_key"
        tools:ignore="TypographyDashes">4c619afc-1121-4a93-9913-5e2cce4af954</string>
</resources>