<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/main_view_group"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:animateLayoutChanges="true">

    <ImageView
        android:id="@+id/close_image_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginTop="8dp"

        app:layout_constraintEnd_toEndOf="@id/end_guideline"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_close" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/start_guideline"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
       app:layout_constraintGuide_begin="16dp"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/end_guideline"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintGuide_end="16dp"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/button_start_guideline"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="32dp"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/button_end_guideline"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintGuide_end="32dp"/>

    <TextView
        android:id="@+id/enter_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter"

        android:layout_marginTop="8dp"

        style="@style/DefaultStyleForAuthorizationTextViews"

        app:layout_constraintTop_toBottomOf="@id/close_image_view"
        app:layout_constraintStart_toStartOf="@id/start_guideline" />

    <TextView
        android:id="@+id/mail_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email_label"

        android:layout_marginTop="16dp"

        style="@style/DefaultStyleForAuthorizationSmallLabels"

        app:layout_constraintStart_toStartOf="@id/start_guideline"
        app:layout_constraintTop_toBottomOf="@id/enter_label" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/input_email_edit_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:layout_marginTop="4dp"

        style="@style/DefaultStyleForAuthorizationEditText"

        app:layout_constraintTop_toBottomOf="@id/mail_label"
        app:layout_constraintStart_toStartOf="@id/start_guideline"
        app:layout_constraintEnd_toEndOf="@id/end_guideline" />

    <TextView
        android:id="@+id/enter_email_error_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_email_error"
        android:visibility="gone"

        style="@style/DefaultStyleForAuthorizationErrorSmallLabels"

        app:layout_constraintStart_toStartOf="@id/start_guideline"
        app:layout_constraintTop_toBottomOf="@id/input_email_edit_text" />

    <TextView
        android:id="@+id/password_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password_label"

        android:layout_marginTop="16dp"

        style="@style/DefaultStyleForAuthorizationSmallLabels"

        app:layout_constraintStart_toStartOf="@id/start_guideline"
        app:layout_constraintTop_toBottomOf="@id/enter_email_error_label" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/input_password_edit_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:inputType="textPassword"

        android:layout_marginTop="4dp"

        style="@style/DefaultStyleForAuthorizationEditText"

        app:layout_constraintStart_toStartOf="@id/start_guideline"
        app:layout_constraintEnd_toEndOf="@id/end_guideline"
        app:layout_constraintTop_toBottomOf="@id/password_label" />

    <TextView
        android:id="@+id/enter_password_error_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_password_error"
        android:visibility="gone"

        style="@style/DefaultStyleForAuthorizationErrorSmallLabels"

        app:layout_constraintStart_toStartOf="@id/start_guideline"
        app:layout_constraintTop_toBottomOf="@id/input_password_edit_text" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/enter_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/enter_to_book_reuse"

        style="@style/DefaultStyleForBigAuthorizationButtons"

        android:layout_marginTop="16dp"

        app:layout_constraintStart_toStartOf="@id/button_start_guideline"
        app:layout_constraintEnd_toEndOf="@id/button_end_guideline"
        app:layout_constraintTop_toBottomOf="@id/enter_password_error_label" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/forget_password_button"
        android:layout_width="0dp"
        android:text="@string/forget_password"

        android:layout_marginTop="32dp"

        style="@style/DefaultStyleForOrangeButtons"

        app:layout_constraintStart_toStartOf="@id/button_start_guideline"
        app:layout_constraintEnd_toEndOf="@id/button_end_guideline"
        app:layout_constraintTop_toBottomOf="@id/enter_button" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/registration_button"
        android:layout_width="0dp"
        android:text="@string/register"

        android:layout_marginTop="4dp"

        style="@style/DefaultStyleForOrangeButtons"

        app:layout_constraintStart_toStartOf="@id/button_start_guideline"
        app:layout_constraintEnd_toEndOf="@id/button_end_guideline"
        app:layout_constraintTop_toBottomOf="@id/forget_password_button"
        />
</androidx.constraintlayout.widget.ConstraintLayout>