<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp">

        <TextView
            android:id="@+id/first_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/recomendation"
            android:textColor="@color/white"

            android:layout_marginStart="8dp"

            style="@style/DefaultStyleForHorizontalLayoutWithTypesAdvertGridTextView"

            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/second_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new_type"

            android:layout_marginStart="16dp"

            style="@style/DefaultStyleForHorizontalLayoutWithTypesAdvertGridTextView"

            app:layout_constraintTop_toTopOf="@id/first_type"
            app:layout_constraintStart_toEndOf="@id/first_type"/>

        <TextView
            android:id="@+id/third_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/near_you"

            android:layout_marginStart="16dp"

            style="@style/DefaultStyleForHorizontalLayoutWithTypesAdvertGridTextView"

            app:layout_constraintTop_toTopOf="@id/second_type"
            app:layout_constraintStart_toEndOf="@id/second_type"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>