<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/tool_bar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:title="@string/about_application"
                app:navigationIcon="@drawable/ic_baseline_arrow_back_ios_24"

                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                />

            <ImageView
                android:id="@+id/book_image_view"
                android:layout_width="50dp"
                android:layout_height="50dp"

                android:layout_marginEnd="16dp"

                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/book_reuse_text_view"
                app:layout_constraintTop_toBottomOf="@id/tool_bar"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:srcCompat="@drawable/book" />

            <TextView
                android:id="@+id/book_reuse_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/book_reuse"

                style="@style/DefaultStyleForMiddleTextView"

                app:layout_constraintStart_toEndOf="@id/book_image_view"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/book_image_view"
                app:layout_constraintBottom_toBottomOf="@id/book_image_view"
                />

            <ImageView
                android:id="@+id/oval_image_view"
                android:layout_width="150dp"
                android:layout_height="150dp"
                app:srcCompat="@drawable/ic_owl"

                android:layout_marginTop="16dp"

                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/book_reuse_text_view"
                />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/start_guideline"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="16dp"
                />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/end_guideline"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:orientation="vertical"
                app:layout_constraintGuide_end="16dp"/>

            <TextView
                android:id="@+id/main_text_view"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/about_application_description"

                style="@style/DefaultStyleForSmallTextView"

                app:layout_constraintStart_toStartOf="@id/start_guideline"
                app:layout_constraintEnd_toEndOf="@id/end_guideline"
                app:layout_constraintTop_toBottomOf="@id/oval_image_view"
                />

            <TextView
                android:id="@+id/link_to_github"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/link_to_github"

                android:layout_marginTop="16dp"

                style="@style/DefaultStyleForSmallTextView"

                app:layout_constraintTop_toBottomOf="@id/main_text_view"
                app:layout_constraintStart_toStartOf="@id/start_guideline"
                />

            <ImageView
                android:id="@+id/copy_link_to_buffer_github"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                app:layout_constraintBottom_toBottomOf="@id/link_to_github"
                app:layout_constraintEnd_toEndOf="@id/end_guideline"
                app:layout_constraintTop_toTopOf="@id/link_to_github"
                app:srcCompat="@drawable/ic_copy" />

            <TextView
                android:id="@+id/link_to_vk"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/link_to_developer_vk"

                android:layout_marginTop="8dp"

                style="@style/DefaultStyleForSmallTextView"

                app:layout_constraintStart_toStartOf="@id/start_guideline"
                app:layout_constraintTop_toBottomOf="@id/link_to_github"
                />

            <ImageView
                android:id="@+id/copy_link_to_buffer_vk"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                app:layout_constraintTop_toTopOf="@id/link_to_vk"
                app:layout_constraintBottom_toBottomOf="@id/link_to_vk"
                app:layout_constraintEnd_toEndOf="@id/end_guideline"
                app:srcCompat="@drawable/ic_copy" />

            <TextView
                android:id="@+id/telegram_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/developer_telegram_title"

                android:layout_marginTop="16dp"

                style="@style/DefaultStyleForSmallTextView"

                app:layout_constraintTop_toBottomOf="@id/link_to_vk"
                app:layout_constraintStart_toStartOf="@id/start_guideline"
                app:layout_constraintEnd_toEndOf="@id/end_guideline"
                />

            <TextView
                android:id="@+id/telegram"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/telegram"

                android:layout_marginTop="8dp"

                style="@style/DefaultStyleForSmallTextView"

                app:layout_constraintTop_toBottomOf="@id/telegram_title"
                app:layout_constraintStart_toStartOf="@id/start_guideline"
                />

            <ImageView
                android:id="@+id/copy_link_to_buffer_telegram"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                app:layout_constraintTop_toTopOf="@id/telegram"
                app:layout_constraintBottom_toBottomOf="@id/telegram"
                app:layout_constraintEnd_toEndOf="@id/end_guideline"
                app:srcCompat="@drawable/ic_copy"
                />

            <TextView
                android:id="@+id/addition_tittle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/about_app_addition_tittle"

                android:layout_marginTop="16dp"

                style="@style/DefaultStyleForSmallTextView"

                app:layout_constraintTop_toBottomOf="@id/telegram"
                app:layout_constraintStart_toStartOf="@id/start_guideline"
                app:layout_constraintEnd_toEndOf="@id/end_guideline"
                />

            <TextView
                android:id="@+id/email_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mandscompanyoffers_gmail_com"

                style="@style/DefaultStyleForSmallTextView"

                android:layout_marginTop="8dp"

                app:layout_constraintTop_toBottomOf="@id/addition_tittle"
                app:layout_constraintStart_toStartOf="@id/start_guideline"
                />

            <ImageView
                android:id="@+id/copy_link_to_buffer_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                app:layout_constraintTop_toTopOf="@id/email_text_view"
                app:layout_constraintBottom_toBottomOf="@id/email_text_view"
                app:layout_constraintEnd_toEndOf="@id/end_guideline"
                app:srcCompat="@drawable/ic_copy"
                />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>