<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.motion.widget.MotionLayout
        android:id="@+id/motion_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layoutDescription="@xml/motion_scene_for_preview_screen"
        >

        <LinearLayout
            android:id="@+id/top_linear_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"

            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"

            app:layout_constraintVertical_bias="0.15"
            >

            <ImageView
                android:id="@+id/book_image_view"
                android:layout_width="@dimen/middle_size_book"
                android:layout_height="@dimen/middle_size_book"

                app:srcCompat="@drawable/book"
                />

            <TextView
                android:id="@+id/book_reuse_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/book_reuse"

                style="@style/DefaultStyleForBigTextView"

                android:layout_marginStart="16dp"
                />
        </LinearLayout>

        <TextView
            android:id="@+id/first_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rent_books"

            style="@style/DefaultStyleForMiddleTextView"

            app:layout_constraintVertical_bias="0.15"
            />

        <TextView
            android:id="@+id/second_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/leave_reviews"

            style="@style/DefaultStyleForMiddleTextView"
            />

    </androidx.constraintlayout.motion.widget.MotionLayout>
</layout>