<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Toolbar
            android:id="@+id/tool_bar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:title="@string/profile"
            android:navigationIcon="@drawable/ic_book"

            style="@style/DefaultStyleForToolBar"

            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />

        <ImageView
            android:id="@+id/cat_image_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tool_bar"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.1"
            app:srcCompat="@drawable/ic_cat" />

        <TextView
            android:id="@+id/anonimus_user_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/anonimus_user"

            android:layout_marginTop="32dp"

            style="@style/DefaultStyleForNotAuthorizationTextView"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cat_image_view"
            />

        <Button
            android:id="@+id/enter_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enter_or_registration"

            android:layout_marginTop="32dp"

            style="@style/DefaultStyleForBigButtons"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/anonimus_user_text_view"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>