<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Toolbar
            android:id="@+id/tool_bar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:title="@string/messages"
            android:navigationIcon="@drawable/ic_book"

            style="@style/DefaultStyleForToolBar"

            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />

        <ImageView
            android:id="@+id/dog_image_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tool_bar"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.1"
            app:srcCompat="@drawable/ic_cocker_spaniel" />

        <TextView
            android:id="@+id/not_authorization_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/you_are_not_authorization"

            android:layout_marginTop="16dp"

            style="@style/DefaultStyleForNotAuthorizationTextView"

            app:layout_constraintTop_toBottomOf="@id/dog_image_view"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/authorization_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/log_in"

            android:layout_marginTop="16dp"

            style="@style/DefaultStyleForBigButtons"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/not_authorization_text_view"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>