<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main_view_group"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:animateLayoutChanges="true">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/start_guideline"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="16dp"/>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/end_guideline"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:orientation="vertical"
            app:layout_constraintGuide_end="16dp"/>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/top_guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="8dp"/>

        <ImageView
            android:id="@+id/back_image_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            app:layout_constraintTop_toTopOf="@id/top_guideline"
            app:layout_constraintStart_toStartOf="@id/start_guideline"
            app:srcCompat="@drawable/ic_baseline_arrow_orange_ios_24" />

        <ImageView
            android:id="@+id/close_image_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            app:layout_constraintTop_toTopOf="@id/top_guideline"
            app:layout_constraintEnd_toEndOf="@id/end_guideline"
            app:srcCompat="@drawable/ic_close" />

        <TextView
            android:id="@+id/recovery_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/password_recovery"

            style="@style/DefaultStyleForAuthorizationTextViews"

            app:layout_constraintStart_toStartOf="@id/start_guideline"
            app:layout_constraintEnd_toEndOf="@id/end_guideline"
            app:layout_constraintTop_toBottomOf="@id/back_image_view" />

        <TextView
            android:id="@+id/recovery_description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/recovery_password_description"

            android:layout_marginTop="8dp"

            style="@style/DefaultStyleForAuthorizationDescriptionLabels"

            app:layout_constraintTop_toBottomOf="@id/recovery_label"
            app:layout_constraintStart_toStartOf="@id/start_guideline"
            app:layout_constraintEnd_toEndOf="@id/end_guideline" />

        <TextView
            android:id="@+id/email_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email_label"

            android:layout_marginTop="16dp"

            style="@style/DefaultStyleForAuthorizationSmallLabels"

            app:layout_constraintStart_toStartOf="@id/start_guideline"
            app:layout_constraintTop_toBottomOf="@id/recovery_description" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/input_email_edit_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"

            android:layout_marginTop="4dp"

            style="@style/DefaultStyleForAuthorizationEditText"

            app:layout_constraintTop_toBottomOf="@id/email_label"
            app:layout_constraintStart_toStartOf="@id/start_guideline"
            app:layout_constraintEnd_toEndOf="@id/end_guideline"/>

        <TextView
            android:id="@+id/enter_email_error_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enter_email_error"
            android:visibility="gone"

            style="@style/DefaultStyleForAuthorizationErrorSmallLabels"

            app:layout_constraintTop_toBottomOf="@id/input_email_edit_text"
            app:layout_constraintStart_toStartOf="@id/start_guideline"
            />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/send_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/send"

            android:layout_marginTop="16dp"

            style="@style/DefaultStyleForBigAuthorizationButtons"

            app:layout_constraintTop_toBottomOf="@id/enter_email_error_label"
            app:layout_constraintStart_toStartOf="@id/start_guideline"
            app:layout_constraintEnd_toEndOf="@id/end_guideline"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>